--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -256,8 +256,10 @@
   "availableBuffs": "Available Buffs",
   "confirm": "Confirm",
   "cancel": "Cancel",
-  "tapTimesToAttack": "Tap {n} time(s) to attack!",
-  "tapTimesToRepair": "Tap {n} time(s) to repair!",
+  "tapTimesToAttack": "Tap {n} times to attack!", 
+    "tapTimesToAttack_one": "Tap {n} time to attack!", 
+  "tapTimesToRepair": "Tap {n} times to repair!", 
+    "tapTimesToRepair_one": "Tap {n} time to repair!",
   "notEnoughEnergyNeed": "Not enough energy! Need {n} energy.",
   "doghouseFullHealth": "Doghouse is already at full health!",
   "destroyedText": "DESTROYED!",
