--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -257,7 +257,9 @@
   "confirm": "Confirmar",
   "cancel": "Cancelar",
   "tapTimesToAttack": "Toca {n} veces para atacar!",
+  "tapTimesToAttack_one": "Toca {n} vez para atacar!",
   "tapTimesToRepair": "Toca {n} veces para reparar!",
+  "tapTimesToRepair_one": "Toca {n} vez para reparar!",
   "notEnoughEnergyNeed": "¡Energía insuficiente! Necesitas {n} de energía.",
   "doghouseFullHealth": "¡La caseta ya tiene la salud completa!",
   "destroyedText": "¡DESTRUIDA!",
