--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -270,8 +270,10 @@
   "availableBuffs": "Dostępne wzmocnienia",
   "confirm": "Potwierdź",
   "cancel": "Anuluj",
-  "tapTimesToAttack": "Stuknij {n} raz(y), aby zaatakować!",
-  "tapTimesToRepair": "Stuknij {n} raz(y), aby naprawić!",
+  "tapTimesToAttack": "Stuknij {n} razy, aby zaatakować!",
+  "tapTimesToAttack_one": "Stuknij {n} raz, aby zaatakować!",
+  "tapTimesToRepair": "Stuknij {n} razy, aby naprawić!",
+  "tapTimesToRepair_one": "Stuknij {n} raz, aby naprawić!",
   "notEnoughEnergyNeed": "Za mało energii! Potrzeba {n} energii.",
   "doghouseFullHealth": "Buda ma już pełne zdrowie!",
   "destroyedText": "ZNISZCZONA!",
