add missing translations

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -171,7 +171,13 @@
       "BUILD_DOGHOUSES_one": "Build {target} doghouse",
       "BUILD_DOGHOUSES_other": "Build {target} doghouses",
       "SPEND_ENERGY": "Spend {target} energy",
+"SPEND_ENERGY_one": "Spend {target} energy",
+"SPEND_ENERGY_other": "Spend {target} energy",
       "GAIN_EXPERIENCE": "Gain {target} XP",
+"GAIN_EXPERIENCE_one": "Gain {target} XP",
+"GAIN_EXPERIENCE_few": "Gain {target} XP",
+"GAIN_EXPERIENCE_many": "Gain {target} XP",
+"GAIN_EXPERIENCE_other": "Gain {target} XP",
       "REPAIR_DOGHOUSES": "Repair {target} doghouse(s)",
       "REPAIR_DOGHOUSES_one": "Repair {target} doghouse",
       "REPAIR_DOGHOUSES_other": "Repair {target} doghouses",
