--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -168,31 +168,39 @@
     },
     "description": {
       "BUILD_DOGHOUSES": "Zbuduj {target} bud(y)",
-      "BUILD_DOGHOUSES_one": "Zbuduj {target} bud(y)",
+      "BUILD_DOGHOUSES_one": "Zbuduj {target} budę",
       "BUILD_DOGHOUSES_few": "Zbuduj {target} budy",
       "BUILD_DOGHOUSES_many": "Zbuduj {target} bud",
       "SPEND_ENERGY": "Wydaj {target} energii",
+"SPEND_ENERGY_one": "Wydaj {target} energię",
+"SPEND_ENERGY_few": "Wydaj {target} energii",
+"SPEND_ENERGY_many": "Wydaj {target} energii",
+"SPEND_ENERGY_other": "Wydaj {target} energii",
       "GAIN_EXPERIENCE": "Zdobądź {target} PD",
+"GAIN_EXPERIENCE_one": "Zdobądź {target} PD",
+"GAIN_EXPERIENCE_few": "Zdobądź {target} PD",
+"GAIN_EXPERIENCE_many": "Zdobądź {target} PD",
+"GAIN_EXPERIENCE_other": "Zdobądź {target} PD",
       "REPAIR_DOGHOUSES": "Napraw {target} bud(y)",
-      "REPAIR_DOGHOUSES_one": "Napraw {target} bud(y)",
+      "REPAIR_DOGHOUSES_one": "Napraw {target} budę",
       "REPAIR_DOGHOUSES_few": "Napraw {target} budy",
       "REPAIR_DOGHOUSES_many": "Napraw {target} bud",
       "ATTACK_DOGHOUSES": "Zaatakuj {target} bud(y)",
-      "ATTACK_DOGHOUSES_one": "Zaatakuj {target} bud(y)",
+      "ATTACK_DOGHOUSES_one": "Zaatakuj {target} budę",
       "ATTACK_DOGHOUSES_few": "Zaatakuj {target} budy",
       "ATTACK_DOGHOUSES_many": "Zaatakuj {target} bud",
       "DESTROY_DOGHOUSES": "Zniszcz {target} bud(y)",
-      "DESTROY_DOGHOUSES_one": "Zniszcz {target} bud(y)",
+      "DESTROY_DOGHOUSES_one": "Zniszcz {target} budę",
       "DESTROY_DOGHOUSES_few": "Zniszcz {target} budy",
       "DESTROY_DOGHOUSES_many": "Zniszcz {target} bud",
       "LEVEL_UP": "Osiągnij {target} nowy(e) poziom(y)",
       "LEVEL_UP_one": "Osiągnij {target} nowy(e) poziom(y)",
       "LEVEL_UP_few": "Osiągnij {target} nowe poziomy",
       "LEVEL_UP_many": "Osiągnij {target} nowych poziomów",
-      "BUILD_DOGHOUSES_other": "Zbuduj {target} bud(y)",
-      "REPAIR_DOGHOUSES_other": "Napraw {target} bud(y)",
-      "ATTACK_DOGHOUSES_other": "Zaatakuj {target} bud(y)",
-      "DESTROY_DOGHOUSES_other": "Zniszcz {target} bud(y)",
+      "BUILD_DOGHOUSES_other": "Zbuduj {target} bud",
+      "REPAIR_DOGHOUSES_other": "Napraw {target} bud",
+      "ATTACK_DOGHOUSES_other": "Zaatakuj {target} bud",
+      "DESTROY_DOGHOUSES_other": "Zniszcz {target} bud",
       "LEVEL_UP_other": "Osiągnij {target} nowy(e) poziom(y)"
     }
   },
